fix z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,7 @@ section {
 }
 
 .modal {
+    z-index: 2;
     display: none;
     position: fixed;
     justify-content: center;
